--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "express-async-handler": "^1.2.0",
     "express-rate-limit": "^7.4.0",
     "firebase": "^10.12.4",
-    "mysql2": "^3.11.0"
+    "mysql2": "^3.11.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
