--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "start": "node app.js",
+    "start": "node server.js",
     "dev": "nodemon app.js"
   },
   "keywords": [],
@@ -25,6 +25,7 @@
     "express-validator": "^7.2.0",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.7.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
@@ -32,6 +33,7 @@
     "nodemailer": "^6.9.15",
     "randomstring": "^1.3.0",
     "sequelize": "^6.37.3",
+    "socket.io": "^4.8.1",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
