--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "randomstring": "^1.3.0",
     "sequelize": "^6.37.3",
     "socket.io": "^4.8.1",
+    "stripe": "^17.3.1",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
