--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.11.0",
     "nodemailer": "^6.9.15",
+    "pdf-lib": "^1.17.1",
     "randomstring": "^1.3.0",
     "sequelize": "^6.37.3",
     "socket.io": "^4.8.1",
